--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -119,7 +119,7 @@
 								</span> <!-- icons -->
 							</span> <!-- social -->
 
-							<span id="social-toggle" class="post-actions-button social">
+							<span id="social-toggle" class="post-actions-button social" title="Share">
 								<i class="fa fa-share-alt"></i>
 							</span>
 						{% endif %}
