--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="{{config.GOOGLE_SITE_VERIFICATION}}" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
