--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -153,9 +153,10 @@
 							{% if post.user.deleted %}
 								<span class="deleted" title="This account no longer exists">[deleted]</span>
 							{% else %}
-								{{post.user.first_name}} {{post.user.last_name}}
-								{% if post.user.username %}
-									({{post.user.username}})
+								{% if post.user.first_name and post.user.first_name != 'None' %}
+									{{post.user.first_name}} {{post.user.last_name}} ({{post.user.username}})
+								{% else %}
+									{{post.user.username}}
 								{% endif %}
 							{% endif %}
 						</span> <!-- author-name -->
