--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -13,14 +13,14 @@
 <div class="col-md-9 post-view">
 
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-6 col-xs-6">
 			<h4 class="post-view-container-title">
 				<a href="{{url_for('index')}}">Home</a>
 				<strong>·</strong>
 				<a href="{{url_for('index')}}{{post.category.url}}">{{post.category.name}}</a>
 			</h4>
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-6 col-xs-6">
 			{{ category_dropdown(title, category, categories) }}
 		</div>
 	</div>
