More WIP on mobile stuff, Post Index

--- a/blender-today/application/static/sass/_helpers.sass
+++ b/blender-today/application/static/sass/_helpers.sass
@@ -106,7 +106,7 @@ $screen-md-max: $screen-lg-min - 1
 .pointer-events-none
 	+pointer-events-none
 
-.text-overflow-ellipsis
+=text-overflow-ellipsis
 	overflow: hidden
 	white-space: nowrap
 	text-overflow: ellipsis
